examples/compiler_errors/header_counts/MixedMain.flx
import MixedBroken

fn main() -> Unit {
    let _x = MixedBroken.SomeInt(1)
    let value: Int = "oops"
    print("hi")
}
